--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -30,8 +30,8 @@
     <div class="card">
       <h3>Information you provide</h3>
       <ul>
-        <li>Account details (e.g., name, email)</li>
-        <li>Content you submit in the App (e.g., roster selections, comments, or profile info).</li>
+        <li>Account details</li>
+        <li>Content you submit in the App (e.g., roster selections or profile info).</li>
       </ul>
 
       <h3>Photos &amp; Camera</h3>
